samples/_failures_safe/1761557136_ea67fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_50ff4cb9.c: In function ‘main’:
./samples/SAFE/__tmp_50ff4cb9.c:161:12: error: missing terminating " character
  161 |     printf("Enter quality level (0-100):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_50ff4cb9.c:161:5: error: expected expression at end of input
  161 |     printf("Enter quality level (0-100):
      |     ^~~~~~
./samples/SAFE/__tmp_50ff4cb9.c:161:5: error: expected declaration or statement at end of input
